# kira-riboqc

./: Cargo.toml  METRICS.md  PIPELINE.md  README.md
resources/ribosome/translation/: codon_suboptimal.tsv  global_translation.tsv  housekeeping.tsv  isr_like.tsv  ribosome_core.tsv  stress_responsive.tsv
src/: lib.rs  main.rs
src/cli/: mod.rs  run.rs
src/core/: membership.rs
src/input/: cache.rs  detect.rs  gene_index.rs  metadata.rs  mod.rs  mtx10x.rs  types.rs
src/metrics/: mod.rs
src/metrics/translation_extension/: aggregate.rs  mod.rs  panels.rs  scores.rs
src/model/: axes.rs  classification.rs  mod.rs  scores.rs
src/pipeline/: mod.rs  stage1_load.rs  stage2_axes.rs  stage3_scores.rs  stage4_classify.rs  stage5_report.rs  stage_translation_regime.rs
src/report/: clinical.rs  mod.rs  panels.rs  pipeline_contract.rs  pipeline_step.rs  summary.rs  tsv.rs
src/simd/: avx2.rs  mod.rs
tests/: stage1_synthetic_10x.rs  stage2_axes_synthetic.rs  stage3_scores_synthetic.rs  stage4_classification.rs  stage5_outputs.rs  stage6_membership.rs  stage6_pipeline_cache.rs  stage6_simd_kind.rs
